@@ -21,6 +21,8 @@
  * add back partitioner to sstable metadata (CASSANDRA-3540)
  * fix NPE in get_count for counters (CASSANDRA-3601)
 Merged from 0.8:
+ * remove invalid assertion that table was opened before dropping it
+   (CASSANDRA-3580)
  * range and index scans now only send requests to enough replicas to
    satisfy requested CL + RR (CASSANDRA-3598)
  * use cannonical host for local node in nodetool info (CASSANDRA-3556)
